# VibeCasino

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: Casino.cpp  Casino.h  SlotMachine.cpp  SlotMachine.h  main.cpp
